Database Migration configured. First Migration created.

--- a/ContactMicroservice/appsettings.json
+++ b/ContactMicroservice/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=test;Password=test;Server=localhost;Port=5432;Database=RiseAssessment;Integrated Security=true;Pooling=true;"
+    "DefaultConnection": "User ID=postgres;Password=test;Server=localhost;Port=5432;Database=ContactMicroservice;Integrated Security=true;Pooling=true;"
   },
   "Logging": {
     "LogLevel": {
