--- a/ReportMicroservice/appsettings.json
+++ b/ReportMicroservice/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "User ID=postgres;Password=test;Server=localhost;Port=5432;Database=ReportMicroservice;Integrated Security=true;Pooling=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
