Global variables moved to appsettings.json

--- a/ReportMicroservice/appsettings.json
+++ b/ReportMicroservice/appsettings.json
@@ -1,7 +1,9 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=test;Server=localhost;Port=5432;Database=ReportMicroservice;Integrated Security=true;Pooling=true;"
+    "DefaultConnection": "User ID=postgres;Password=348348;Server=localhost;Port=5432;Database=ReportMicroservice;Integrated Security=true;Pooling=true;"
   },
+  "ContactMicroserviceLink": "https://localhost:44375/PhoneBook/",
+  "RabbitMQServer": "localhost",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
